src/app/feed/post/post.component.scss
@use "../../../color-pallete.scss" as CP;
@use "@coreui/coreui/scss/coreui";

:host {
  display: block;
}

.post {
  display: block;
  border-radius: 20px;
  box-shadow: CP.$Secondary-color 0px 0px 5px;
  z-index: 20;
  max-width: 110vh;
  margin: 0 auto;
}

.postedImageContainer {
  display: block;
  width: 100%;
}

.postedImageContainer img {
  width: 100%;
}

.postInfo {
  display: grid;
  width: 37%;
  position: absolute;
  right: 9vh;
  grid-template-columns: 50% 50%;
  font-size: 1.2em;
  text-align: center;
  color: #3f422ec4;
}
.text {
  font-size: 1.5em;
}

.text p {
  padding-left: 3px;
  margin-bottom: 0px;
}

p.text {
  padding: 3px 0px;
}

.material-icons {
  color: CP.$Ternary-color;
}

button {
  border-radius: 25px;
}

